style: Fix contrast issue in app switcher
- update focus style for tile_button drawing
- override style for switcher selected state to use focus style
- fix contrast issue with checked state

--- a/data/theme/gnome-shell-sass/_common.scss
+++ b/data/theme/gnome-shell-sass/_common.scss
@@ -68,7 +68,7 @@ stage {
   color: inherit;
 
   @if $is_highcontrast {
-    border-color: $hc_inset_color;
+    border-color: $hc_inset_color !important;
   }
 }
 
