--- a/data/theme/gnome-shell-sass/widgets/_switcher-popup.scss
+++ b/data/theme/gnome-shell-sass/widgets/_switcher-popup.scss
@@ -25,10 +25,19 @@ $switcher_padding: $base_padding*2;
   // each item in the list
   .item-box {
     @include tile_button($osd_fg_color);
-    // override over style so mouse doesn't steal focus
-    &:hover {background: none;}
-    @if $is_highcontrast {
-      box-shadow: inset 0 0 0 999px transparentize($hc_inset_color,0.2);
+    // override hover style so mouse doesn't steal focus
+    &:hover { background: none;}
+
+    // specific style bits for the highlighted item to use focus styling
+    &:selected {
+      $sc: mix($osd_fg_color, $selected_bg_color, 20%);
+      background-color: transparentize($sc, .7);
+      border-color: transparentize($selected_bg_color, .3);
+      &:active { background-color: transparentize($sc, .67);}
+      &:hover { background-color: transparentize($sc, .63);}
+      @if $is_highcontrast {
+        border-color: $selected_bg_color !important;
+      }
     }
   }
 
